--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:server": "swc src/server -d dist/server",
-    "copy:client": "mkdir -p client-build && cp -r ../path/to/station1-react-app/dist/* ./client-build/",
-    "build": "npm run build:server && npm run copy:client",
+    "build:server": "swc src/server -d dist",
+    "build": "npm run build:server",
     "start": "node dist/server/index.js",
-    "dev:server": "swc src/server -d dist/server --watch",
+    "dev:server": "swc src/server -d dist --watch",
     "dev": "nodemon"
   },
   "keywords": [],
