--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@swc/cli": "^0.6.0",
